--- a/audi.html
+++ b/audi.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMW Cars</title>
+    <title>Audi Cars</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section class="main bmw">
+    <section class="main audi">
       <h1>Audi R8</h1>
       <p>An electrfying performer</p>
     </section>
